--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,16 @@ h4 {
   text-transform: uppercase;
 }
 
+.title1 {
+  color: var(--dark);
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+  text-align: center;
+  margin-top: 2rem;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
+
 .greeting .title {
   display: flex;
   align-items: center;
@@ -68,7 +78,6 @@ h4 {
   margin-left: 0.5rem;
   flex: 1 1 0%;
   min-width: 0;
-  background-color: #676666;
   border-radius: 0.5rem;
   padding: 0.5rem;
 }
